# AlienOS

./: .gitignore  Cargo.toml  boot.ld  boot.s  bootstrap_mmu.c  build.rs  console.c  console.h  e2mknod.sh  kernel.ld  main.c  main.ld  makefile  mmu.c  mmu.h  run_qemu.sh  startup.s  utils.h
.cargo/: config.toml
alien-derive/: Cargo.toml
alien-derive/src/: lib.rs
alien-traits/: Cargo.toml
alien-traits/src/: lib.rs  pod.rs
init/: Cargo.toml
init/.cargo/: config.toml
init/src/: main.rs
loader/: loader.ld  makefile  mmu.c  mmu.h  types.h
src/: arch.rs  bitmap.rs  console.rs  dtb.rs  entry.rs  error.rs  gic.rs  heap.rs  interrupts.rs  kalloc.rs  kernel.ld  kernel_entry.S  kernel_location.rs  main.rs  memory_model.rs  mmio.rs  mmu.rs  num.rs  panic_handler.rs  phys.rs  ring_buffer.rs  semihosting.rs  spinlock.rs  step_range.rs  testing.rs
src/alloc/: arc.rs  box.rs  mod.rs  unique.rs  vec.rs
src/console/: mod.rs  pl011.rs  print_buf.rs  printing.rs  write_buffer.rs
src/device_tree/: bytes_reader.rs  clock.rs  consume.rs  device_tree.rs  error.rs  flattened_header.rs  interrupt_controller.rs  interrupts.rs  memory.rs  mod.rs  parse.rs  pl011.rs  root.rs  string_block.rs  timer.rs  tokens.rs
src/drivers/: block.rs  char_dev.rs  mmio.rs  mod.rs  pl011.rs  virtio_blk.rs
src/fs/: file.rs  file_system.rs  inode.rs  mod.rs  null_fs.rs  path.rs
src/heap/: block.rs  kern_allocator.rs  kern_heap.rs  mod.rs
src/interrupts/: data_abort.rs  gic_cpu.rs  gic_dispatcher.rs  handlers.rs  interrupt.rs  interrupt_stack.rs  interrupt_table.rs  interrupts.rs  mod.rs  (+4 more)
(+46 files in other folders)
