[package]
name = "alienos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0.46"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
atomic_enum = "0.3.0"
paste = "1.0.15"
static_assertions = "1.1.0"
thiserror-no-std = "2.0.2"
alien-traits = { path = "./alien-traits" }
alien-derive = { path = "./alien-derive" }

[features]
logging = []
